# korosensei

./: .env.example  Cargo.toml  README.md  wrangler.toml
src/: lib.rs  main.rs
src/jobs/: audio_linker.rs  mod.rs  transcription.rs
src/jobs/transcription/: deepgram.rs  file_discovery.rs  file_meta.rs  link.rs  markdown.rs  mod.rs  template.rs
src/jobs/transcription/markdown/: char_stream.rs  mod.rs  parse_markdown.rs  test_data.rs  test_markdown_parse.rs
src/jobs/transcription/markdown/nodes/: block.rs  headline.rs  html.rs  link.rs  mod.rs  paragraph.rs
src/utils/: char_stream.rs  commandline.rs  config.rs  credentials.rs  git.rs  mod.rs  prerequisits.rs  string.rs  time.rs
src/utils/git/: blame.rs  mod.rs
