[package]
name = "korosensei"
version = "0.1.0"
edition = "2021"
authors = [ "Codecrafter_404 <codecrafter404@github.com>" ]

[dependencies]
reqwest = {version = "0.12.5", features = ["json"]}
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
graph-rs-sdk = {version = "2.0.0", features = ["rustls-tls"]}
color-eyre = "0.6.3"
futures = "0.3.30"
tokio = {version = "1.38.0", features = ["macros"]}
log = "0.4.22"
env_logger = "0.11.3"
dotenv = "0.15.0"
clap = {version = "4.5.9", features = ["derive"]}
