[package]
name = "korosensei"
version = "0.1.0"
edition = "2021"
description = "Supercharge your school notes at mach 20"
authors = [ "Codecrafter_404 <codecrafter404@github.com>" ]

[dependencies]
reqwest = {version = "0.12.5", features = ["json"]}
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
graph-rs-sdk = {version = "2.0.0", features = ["rustls-tls"]}
color-eyre = "0.6.3"
tokio = {version = "1.38.0", features = ["macros"]}
log = "0.4.22"
env_logger = "0.11.3"
dotenv = "0.15.0"
clap = {version = "4.5.9", features = ["derive"]}
which = "6.0.1"
lazy-regex = "3.1.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"
patch = "0.7.0"
itertools = "0.13.0"
deepgram = {git = "https://github.com/codecrafter404/deepgram-rust-sdk/", rev = "d4134d847e74d9f142862570bb5629de41ad237e"}
rand = "0.8.5"
